logs/KPIs_for_5_Minutes/fetch_master_Data/2024-12-04T053500+0000/2.log
[2024-12-04 05:41:13,344] {taskinstance.py:896} INFO - Dependencies all met for <TaskInstance: KPIs_for_5_Minutes.fetch_master_Data 2024-12-04T05:35:00+00:00 [queued]>
[2024-12-04 05:41:13,414] {taskinstance.py:896} INFO - Dependencies all met for <TaskInstance: KPIs_for_5_Minutes.fetch_master_Data 2024-12-04T05:35:00+00:00 [queued]>
[2024-12-04 05:41:13,415] {taskinstance.py:1087} INFO - 
--------------------------------------------------------------------------------
[2024-12-04 05:41:13,417] {taskinstance.py:1088} INFO - Starting attempt 2 of 3
[2024-12-04 05:41:13,418] {taskinstance.py:1089} INFO - 
--------------------------------------------------------------------------------
[2024-12-04 05:41:13,583] {taskinstance.py:1107} INFO - Executing <Task(PythonOperator): fetch_master_Data> on 2024-12-04T05:35:00+00:00
[2024-12-04 05:41:13,592] {standard_task_runner.py:52} INFO - Started process 688 to run task
[2024-12-04 05:41:13,603] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'KPIs_for_5_Minutes', 'fetch_master_Data', '2024-12-04T05:35:00+00:00', '--job-id', '461', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/Kpi_dags/main.py', '--cfg-path', '/tmp/tmpjajm4l7v', '--error-file', '/tmp/tmpdyypg_x7']
[2024-12-04 05:41:13,612] {standard_task_runner.py:77} INFO - Job 461: Subtask fetch_master_Data
[2024-12-04 05:41:13,855] {logging_mixin.py:104} INFO - Running <TaskInstance: KPIs_for_5_Minutes.fetch_master_Data 2024-12-04T05:35:00+00:00 [running]> on host ca28183b9a80
[2024-12-04 05:41:14,092] {taskinstance.py:1300} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Rule Manager
AIRFLOW_CTX_DAG_ID=KPIs_for_5_Minutes
AIRFLOW_CTX_TASK_ID=fetch_master_Data
AIRFLOW_CTX_EXECUTION_DATE=2024-12-04T05:35:00+00:00
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2024-12-04T05:35:00+00:00
[2024-12-04 05:41:14,095] {main.py:98} INFO - Fetching data from master db and storing excel between 2024-12-04 05:35:00 and 2024-12-04 05:40:00
[2024-12-04 05:41:14,097] {main.py:23} INFO - Connecting to database...
[2024-12-04 05:41:14,130] {base.py:69} INFO - Using connection to: id: master_table_conn. Host: 10.10.18.92, Port: 5432, Schema: landing_zone, Login: Chakradhar, Password: ***, extra: {}
[2024-12-04 05:41:14,413] {main.py:26} INFO - Connected successfully...
[2024-12-04 05:41:14,543] {main.py:43} ERROR - Exception while getting KPI data from DB: Execution failed on sql 'SELECT * FROM raw_data WHERE tag_model_id in ('339',) AND ts BETWEEN '2024-12-04 05:35:00' and '2024-12-04 05:40:00' ': syntax error at or near ")"
LINE 1: ...LECT * FROM raw_data WHERE tag_model_id in ('339',) AND ts B...
                                                             ^

[2024-12-04 05:41:14,545] {taskinstance.py:1501} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 1725, in execute
    cur.execute(*args, **kwargs)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: ...LECT * FROM raw_data WHERE tag_model_id in ('339',) AND ts B...
                                                             ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1157, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1331, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1361, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 150, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 161, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/Kpi_dags/main.py", line 100, in masterdata_to_excel
    temp_data = get_db_data(masterdata_conn, master_query)
  File "/opt/airflow/dags/Kpi_dags/main.py", line 44, in get_db_data
    raise e
  File "/opt/airflow/dags/Kpi_dags/main.py", line 36, in get_db_data
    df = pd.read_sql_query(query, conn)
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 388, in read_sql_query
    return pandas_sql.read_query(
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 1771, in read_query
    cursor = self.execute(*args)
  File "/home/airflow/.local/lib/python3.8/site-packages/pandas/io/sql.py", line 1737, in execute
    raise ex from exc
pandas.io.sql.DatabaseError: Execution failed on sql 'SELECT * FROM raw_data WHERE tag_model_id in ('339',) AND ts BETWEEN '2024-12-04 05:35:00' and '2024-12-04 05:40:00' ': syntax error at or near ")"
LINE 1: ...LECT * FROM raw_data WHERE tag_model_id in ('339',) AND ts B...
                                                             ^

[2024-12-04 05:41:14,553] {taskinstance.py:1544} INFO - Marking task as UP_FOR_RETRY. dag_id=KPIs_for_5_Minutes, task_id=fetch_master_Data, execution_date=20241204T053500, start_date=20241204T054113, end_date=20241204T054114
[2024-12-04 05:41:14,735] {local_task_job.py:151} INFO - Task exited with return code 1
